--- a/YiRenDai/ManageTeamTableViewCell.xib
+++ b/YiRenDai/ManageTeamTableViewCell.xib
@@ -44,7 +44,7 @@
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FKz-VS-cpa">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FKz-VS-cpa">
                         <rect key="frame" x="277" y="260" width="30" height="12"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="LCM-z4-rHu"/>
